--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,6 @@ p {
     width: 800px;
     margin: 0 auto;
 }
-
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -78,7 +77,20 @@ p {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
-
+.top-content .navbar{
+    display:flex;
+    justify-content:space-evenly;
+    width: 100%;
+    align-items:flex-end;
+    padding:20px 0;
+}
+.headerimg{
+    padding:20px 0;
+}
+.top-content .navbar .navlink{
+    text-decoration: none;
+    color:black;
+}
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
