--- a/css/about.css
+++ b/css/about.css
@@ -64,8 +64,8 @@ h1, h2, h3, h4, h5 {
 
 p {
     line-height: 1.4;
+    padding: 16px;
 }
-
 .container {
     width: 800px;
     margin: 0 auto;
@@ -75,8 +75,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
+    }
 .top-content .navbar{
     display:flex;
     justify-content:space-between;
@@ -84,92 +83,76 @@ p {
     align-items:flex-end;
     padding:20px 0;
 }
+
+.top-content .navbar .navlink{
+text-decoration: none;
+color:black;
+}
 .headerimg{
     padding:20px 0;
 }
-.top-content .navbar .navlink{
-    text-decoration: none;
-    color:black;
-}
-.top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
-
-.middle-content {
+.container .about-page {
+    display:flex;
     margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
 }
 
-.middle-content h2 {
+.about-page h2 {
     padding: 0 2%;
     margin-bottom: 0;
 }
 
-.middle-content .boxes {
+.about-page .aboutbox {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    border-bottom:dashed 1px black;
+}
+.container .about-page .subcontentbox{
+    display:flex;
+    flex-direction: column;
+    width:45%;
+    padding:20px 0 0;
+    border-bottom:dashed 1px black;
+}
+.container .about-page .subcontentbox h2{
+    display:flex;
+    padding:10px 0;
+}
+.container .about-page .subcontentbox p{
+    display:flex;
+    padding:10px 0;
+}
+.container .about-page .subcontentbox .morebutton{
+    display:flex;
+    padding:10px 0;
+    margin:10px 0;
+    border:solid 2px black;
+    border-radius: 10px;
+    width:35%;
+    justify-content:space-around;
+}
+.container .about-page .contentbox2{
+    display:flex;
+    flex-direction:column;
+    width:100%;
+    padding:20px 0 0;
+    border-bottom:dashed 1px black;
+}
+.container .about-page .contentbox2 h2{
+    padding:10px 0;
+}
+.container .about-page .contentbox2 p{
+    padding:10px 0;
 }
 
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    background: black;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.middle-content .boxes .box1{
-    background:teal;
-}
-.middle-content .boxes .box2{
-    background:gold;
-}
-.middle-content .boxes .box3{
-    background:cadetblue;
-}
-.middle-content .boxes .box4{
-    background:coral;
-}
-.middle-content .boxes .box5{
-    background:crimson;
-}
-.middle-content .boxes .box6{
-    background:forestgreen;
-}
-.middle-content .boxes .box7{
-    background:darkorchid;
-}
-.middle-content .boxes .box8{
-    background:hotpink;
-}
-.middle-content .boxes .box9{
-    background:indigo;
-}
-.middle-content .boxes .box10{
-    background:dodgerblue;
-}
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
-}
-
-.bottom-content .text-container {
-    padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
-
+/* End of Page */
 footer {
+    display:flex;
     width: 100%;
+    margin:0 auto;
     background: black;
 }
 
