--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,9 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
+:root {
+	--mainColor:darkblue;
+  }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -84,9 +86,37 @@ p {
     padding:20px 0;
 }
 
+/*Added CSS link animations */
 .top-content .navbar .navlink{
-text-decoration: none;
-color:black;
+    position: relative;
+    color: black;
+    text-decoration: none;
+}
+.top-content .navbar .navlink:hover{
+    color:black;
+}
+
+/*Adds a border and hides it before user hovers */
+.top-content .navbar .navlink:before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+/*Displays Border and Transforms it by making scaleX visible*/
+.top-content .navbar .navlink:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
 }
 .headerimg{
     padding:20px 0;
