--- a/css/index.css
+++ b/css/index.css
@@ -66,152 +66,147 @@ p {
     line-height: 1.4;
 }
 
-.container {
-    width: 800px;
-    margin: 0 auto;
-}
-.top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
-.top-content .navbar{
-    display:flex;
-    justify-content:space-between;
-    width: 100%;
-    align-items:flex-end;
-    padding:20px 0;
-}
-.headerimg{
-    padding:20px 0;
-}
-/*Added CSS link animations */
-.top-content .navbar .navlink{
-    position: relative;
-    color: black;
-    text-decoration: none;
-}
-.top-content .navbar .navlink:hover{
-    color:black;
-}
+@Media(min-width: 800px){
+    .container {
+        width: 800px;
+        margin: 0 auto;
+    }
+    .top-content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin-bottom: 20px;
+        border-bottom: 1px dashed black;
+    }
+    .top-content .navbar{
+        display:flex;
+        justify-content:space-between;
+        width: 100%;
+        align-items:flex-end;
+        padding:20px 0;
+    }
+    .headerimg{
+        padding:20px 0;
+    }
+    /*Added CSS link animations */
+    .navbar .navlink{
+        position: relative;
+        color: black;
+        text-decoration: none;
+    }
+    .navbar .navlink:hover{
+        color:black;
+    }
 
-/*Adds a border and hides it before user hovers */
-.top-content .navbar .navlink:before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000;
-    visibility: hidden;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
-}
+    /*Adds a border and hides it before user hovers */
+    .navbar .navlink:before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #000;
+        visibility: hidden;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transition: all 0.3s ease-in-out 0s;
+        transition: all 0.3s ease-in-out 0s;
+    }
 
-/*Displays Border and Transforms it by making scaleX visible*/
-.top-content .navbar .navlink:hover:before {
-    visibility: visible;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-}
+    .top-content .text-container {
+        width: 48%;
+        padding: 0 1%;
+        padding-bottom: 20px;  
+    }
 
-.top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
+    .middle-content {
+        margin-bottom: 20px;
+        border-bottom: 1px dashed black;
+    }
 
-.middle-content {
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
+    .middle-content h2 {
+        padding: 0 2%;
+        margin-bottom: 0;
+    }
 
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
-}
+    .middle-content .boxes {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
 
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
+    .middle-content .boxes .box {
+        width: 12.5%;
+        height: 100px;
+        background: black;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    background: black;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    .middle-content .boxes .box1{
+        background:teal;
+    }
+    .middle-content .boxes .box2{
+        background:gold;
+    }
+    .middle-content .boxes .box3{
+        background:cadetblue;
+    }
+    .middle-content .boxes .box4{
+        background:coral;
+    }
+    .middle-content .boxes .box5{
+        background:crimson;
+    }
+    .middle-content .boxes .box6{
+        background:forestgreen;
+    }
+    .middle-content .boxes .box7{
+        background:darkorchid;
+    }
+    .middle-content .boxes .box8{
+        background:hotpink;
+    }
+    .middle-content .boxes .box9{
+        background:indigo;
+    }
+    .middle-content .boxes .box10{
+        background:dodgerblue;
+    }
+    .bottom-content {
+        display: flex;
+        margin: 0 2% 20px;
+        justify-content: space-around;
+    }
 
-.middle-content .boxes .box1{
-    background:teal;
-}
-.middle-content .boxes .box2{
-    background:gold;
-}
-.middle-content .boxes .box3{
-    background:cadetblue;
-}
-.middle-content .boxes .box4{
-    background:coral;
-}
-.middle-content .boxes .box5{
-    background:crimson;
-}
-.middle-content .boxes .box6{
-    background:forestgreen;
-}
-.middle-content .boxes .box7{
-    background:darkorchid;
-}
-.middle-content .boxes .box8{
-    background:hotpink;
-}
-.middle-content .boxes .box9{
-    background:indigo;
-}
-.middle-content .boxes .box10{
-    background:dodgerblue;
-}
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
-}
+    .bottom-content .text-container {
+        padding-right: 4%;
+    }
 
-.bottom-content .text-container {
-    padding-right: 4%;
-}
+    .bottom-content .text-container:last-child {
+        padding-right: 0;
+    }
 
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
+    footer {
+        width: 100%;
+        background: black;
+    }
 
-footer {
-    width: 100%;
-    background: black;
-}
+    footer nav {
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 2%;
+        font-size: 14px;
+    }
 
-footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
-    font-size: 14px;
-}
-
-footer nav a {
-    color: white;
-    text-decoration: none;
+    footer nav a {
+        color: white;
+        text-decoration: none;
+    }
 }
